<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="danielsalinasjaramillo.com.turismocolombiav3.PublicidadFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.danielsalinasjaramillo.colombia_turistica.MainActivity"
            android:orientation="vertical">

            <TextView
                style="@style/textViewStyle.Title"
                android:text="@string/itagui"
                />

            <TextView
                style="@style/textViewStyle.Content"
                android:text="@string/itaslogan"
                />

            <ImageView
                style="@style/imageViewStyle"
                android:src="@drawable/escudo"/>

            <TextView
                style="@style/textViewStyle.Content"
                android:text="@string/deporte"
                />

            <ImageView
                style="@style/imageViewStyle"
                android:src="@drawable/ditaires"/>

            <TextView
                style="@style/textViewStyle.Content"
                android:text="@string/deportistas"/>

            <TextView
                style="@style/textViewStyle.Content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/recreacion"
                />

            <ImageView
                style="@style/imageViewStyle"
                android:src="@drawable/acuaparque"/>

            <TextView
                style="@style/textViewStyle.Content"
                android:text="@string/acuaparque_ditaires"/>

            <TextView
                style="@style/textViewStyle.Content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/teatro"
                />

            <ImageView
                style="@style/imageViewStyle"
                android:src="@drawable/teatro"/>

            <TextView
                style="@style/textViewStyle.Content"
                android:text="@string/festival"/>

            <TextView
                style="@style/textViewStyle.Content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/invitacion"/>

        </LinearLayout>

    </ScrollView>



</FrameLayout>
