<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="danielsalinasjaramillo.com.turismocolombiav3.Hotel3Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        style = "@style/linearLayoutStyle">
        <TextView
            style = "@style/textViewStyle.Title"
            android:text="@string/fernando"/>
        <ImageView
            style = "@style/imageViewStyle"
            android:src="@drawable/fernando"/>
        <TextView
            style = "@style/textViewStyle.Content"
            android:text="@string/fernando_datos"/>

        <Button
            style="@style/ButtonStyle"
            android:text="@string/mapa"
            android:id="@+id/bmhotel3"
            />

    </LinearLayout>

    </ScrollView>
</FrameLayout>
