<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="danielsalinasjaramillo.com.turismocolombiav3.DemografiaFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.danielsalinasjaramillo.colombia_turistica.MainActivity"
            android:orientation="vertical">

            <TextView
                style="@style/textViewStyle.Title"
                android:text="@string/itagui"
                />

            <TextView
                style="@style/textViewStyle.Content"
                android:text="@string/demografia"
                />

            <ImageView
                style="@style/imageViewStyle"
                android:src="@drawable/mapa"/>


            <TextView
                style="@style/textViewStyle.Content"
                android:text="@string/informaci_demogra"
                />


            <Button
                style="@style/ButtonStyle"
                android:text="Mapa"
                android:id="@+id/bmitagui"
                />

        </LinearLayout>

    </ScrollView>


</FrameLayout>

